// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "byd50-ssi/proto-files";
option java_multiple_files = true;
option java_package = "io.grpc.examples.proto-files";
option java_outer_classname = "HelloWorldProto";

package registrar;

service Registrar {
  rpc CreateDid (CreateDidRequest) returns (CreateDidResponse) {}
  rpc RegisterDid (RegisterDidRequest) returns (RegisterDidResponse) {}
  rpc ResolveDid (ResolveDidRequest) returns (ResolveDidResponse) {}
  rpc UpdateDid (UpdateDidRequest) returns (UpdateDidResponse) {}
}

message CreateDidRequest {
  string public_key_base58 = 1;
  string method = 2;
}

message CreateDidResponse {
  string did = 1;
}

message RegisterDidRequest {
  string did = 1;
  string document = 2;
}

message RegisterDidResponse {
  string result = 1;
}

message ResolveDidRequest {
  string did = 1;
}

message ResolveDidResponse {
  string resolution_error = 1;
  string did_document = 2;
  string did_document_metadata = 3;
}

message UpdateDidRequest {
  string did = 1;
  string document = 2;
}

message UpdateDidResponse {
  string result = 1;
}
