// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "byd50-ssi/proto-files";
option java_multiple_files = true;
option java_package = "io.grpc.examples.proto-files";
option java_outer_classname = "HelloWorldProto";

package relyingparty;

service RelyingParty {
  rpc AuthChallenge (ChallengeRequest) returns (ChallengeReply) {}
  rpc AuthResponse (ResponseRequest) returns (ResponseReply) {}
  rpc SimplePresent (SimplePresentRequest) returns (SimplePresentReply) {}
  rpc VerifyVp (VerifyVpRequest) returns (VerifyVpReply) {}
}

message ChallengeRequest {
  string did = 1;
}

message ChallengeReply {
  string auth_challenge = 1;
}

message ResponseRequest {
  string auth_response = 1;
}

message ResponseReply {
  string message = 1;
}

message SimplePresentRequest {
  string simple_present = 1;
}

message SimplePresentReply {
  string result = 1;
}

message VerifyVpRequest {
  string vp = 1;
}

message VerifyVpReply {
  string result = 1;
}
